# haskell-flake-repro

p-a/: cabal.project  flake.nix
p-a/a/: a.cabal
p-a/b/: b.cabal
p-b/: cabal.project  flake.nix
p-b/c/: CHANGELOG.md  c.cabal
