cabal-version:   3.0
name:            b
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE

-- author:
-- maintainer:
-- copyright:
category:        repro
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  MyLib

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , c

  hs-source-dirs:   src
  default-language: Haskell2010
